tests/ui/unsatisfied_bounds.stderr
error[E0277]: the trait bound `Vec<_>: Copy` is not satisfied
 --> tests/ui/unsatisfied_bounds.rs:7:20
  |
7 |     let _foo = Foo(Vec::new());
  |                --- ^^^^^^^^^^ the trait `Copy` is not implemented for `Vec<_>`
  |                |
  |                required by a bound introduced by this call
  |
note: required by a bound in `Foo`
 --> tests/ui/unsatisfied_bounds.rs:3:13
  |
3 | #[bounds(T: Copy)]
  |             ^^^^ required by this bound in `Foo`
4 | struct Foo<T>(T);
  |        --- required by a bound in this tuple struct

error[E0277]: the trait bound `Vec<_>: Copy` is not satisfied
 --> tests/ui/unsatisfied_bounds.rs:7:16
  |
7 |     let _foo = Foo(Vec::new());
  |                ^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `Vec<_>`
  |
note: required by a bound in `Foo`
 --> tests/ui/unsatisfied_bounds.rs:3:13
  |
3 | #[bounds(T: Copy)]
  |             ^^^^ required by this bound in `Foo`
4 | struct Foo<T>(T);
  |        --- required by a bound in this struct
